plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.wishconnect'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	jjwtVersion = '0.12.6'
	springdocVersion = '2.6.0'
	therapiVersion = '0.15.0'
	anthropicSdkVersion = '2.34.0'
	poiVersion = '5.3.0'
}

dependencies {
	// Spring Boot starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.jsoup:jsoup:1.17.2' // 교내 장학공지 크롤링(HTML 파싱)
	// 관리자 콘솔의 장학금 일괄 편집(엑셀 내보내기·업로드).
	// CSV 를 쓰면 윈도우 엑셀이 CP949 로 저장해 한글이 깨지고, 쉼표가 든 제목에서 열이 밀린다.
	// 여러 명이 편집하는 파일이라 인코딩 사고가 없는 xlsx 로 간다.
	// 메모리 주의: t3.small(-Xmx1g)이라 업로드 크기·행수 상한을 반드시 건다(ScholarshipExcelService).
	implementation "org.apache.poi:poi-ooxml:${poiVersion}"
	implementation platform('software.amazon.awssdk:bom:2.29.35')
	implementation 'software.amazon.awssdk:s3' // 장학공지 포스터 이미지 저장
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// Refresh Token 저장용 (카카오 로그인은 RestClient 직접 호출 + 자체 JWT 발급 방식이라 oauth2-client 미사용)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// 이메일 발송 (JavaMailSender, 구현체는 AWS SES SMTP)
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// 헬스체크/모니터링 (배포 헬스체크에 /actuator/health 사용)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// API documentation
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
	// 컨트롤러/DTO 의 javadoc 을 Swagger 설명으로 자동 추출 (별도 @Operation 주석 없이 문서화)
	implementation "com.github.therapi:therapi-runtime-javadoc:${therapiVersion}"
	annotationProcessor "com.github.therapi:therapi-runtime-javadoc-scribe:${therapiVersion}"

	// JWT
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

	// Database
	runtimeOnly 'org.postgresql:postgresql'

	// Anthropic Claude SDK (AI 자기소개서 인터뷰 질문·초안 생성)
	implementation "com.anthropic:anthropic-java:${anthropicSdkVersion}"

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
